--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <!-- This site was created in Webflow. https://webflow.com -->
 <!-- Last Published: Sat Nov 08 2025 11:33:26 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="www.adko.in" data-wf-page="67baec8acda347f8a7b9e947" data-wf-site="67baec8acda347f8a7b9e834" lang="en">
@@ -292,18 +292,18 @@
                                 </nav>
                             </div>
                             <div class="side-menu-text-wrap">
-                                <a href="/brand-solutions" class="text-weight-medium w-nav-link">our services</a>
+                                <a href="brand-solutions.html" class="text-weight-medium w-nav-link">our services</a>
                                 <div class="underline"></div>
                             </div>
                             <div class="side-menu-text-wrap">
-                                <a href="/our-campaigns" class="text-weight-medium w-nav-link">Our campaigns</a>
+                                <a href="our-campaigns.html" class="text-weight-medium w-nav-link">Our campaigns</a>
                                 <div class="underline"></div>
                             </div>
                             <div class="side-menu-text-wrap">
-                                <a href="/about" aria-current="page" class="text-weight-medium w-nav-link w--current">About us</a>
+                                <a href="about.html" aria-current="page" class="text-weight-medium w-nav-link w--current">About us</a>
                                 <div class="underline"></div>
                             </div>
-                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19fd5" href="/contact-us" class="nav-button w-inline-block">
+                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19fd5" href="contact-us.html" class="nav-button w-inline-block">
                                 <div class="nav-button-glow-wrapper">
                                     <div class="nav-button-glow"></div>
                                 </div>
@@ -622,7 +622,7 @@
                 <div class="about-content-master">
                     <div class="about-text-master">
                         <div class="label-master dark">
-                            <div class="label-3 dark">Meet ADKO</div>
+                            <div class="label-3 dark">Meet WHITE Circle Group</div>
                         </div>
                         <div class="about-text-wrap">
                             <div data-w-id="a4d970ca-44a3-3ba9-884f-2256f5cf59e3" style="opacity:0" class="text-h4">At WHITE Circle Group, we’re creators, strategists, and storytellers all rolled into one. We believe great ideas come from a mix of creativity, insight, and relentless execution. From digital marketing and content creation to immersive 3D visuals and full-scale campaigns, we deliver solutions that make brands stand out and connect with their audience.</div>
@@ -1327,9 +1327,9 @@
                                 </div>
                                 <div class="foote-links-content">
                                     <a href="/" class="footer-link-text">Home</a>
-                                    <a href="/about" aria-current="page" class="footer-link-text w--current">About</a>
-                                    <a href="/brand-solutions" class="footer-link-text">Our Services</a>
-                                    <a href="/contact-us" class="footer-link-text">Contact</a>
+                                    <a href="about.html" aria-current="page" class="footer-link-text w--current">About</a>
+                                    <a href="brand-solutions.html" class="footer-link-text">Our Services</a>
+                                    <a href="contact-us.html" class="footer-link-text">Contact</a>
                                 </div>
                             </div>
                             <div data-w-id="609f83dc-bc98-35a8-9c28-b3075264e1f9" class="footer-links-wrapper">
@@ -1383,4 +1383,4 @@
         <script src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/js/webflow.schunk.7d6ed723a5264309.js" type="text/javascript"></script>
         <script src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/js/webflow.bee1e578.97bf5dda8ac8cfe8.js" type="text/javascript"></script>
     </body>
-</html>
+</html> -->
