--- a/contact-us.html
+++ b/contact-us.html
@@ -73,7 +73,7 @@
                                 <nav class="w-dropdown-list">
                                     <div class="mega-menu-wrap-2">
                                         <div class="mega-menu-halves-2">
-                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f48" href="/photography-by-adkompany" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f48" href="photography-by-adkompany.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">Our Photography</div>
                                                 </div>
@@ -81,7 +81,7 @@
                                                     <img loading="lazy" src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/68502ae0f7228b75a1dc0755_Cocktail.avif" alt="" class="menu-page-image-2"/>
                                                 </div>
                                             </a>
-                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f4e" href="/videography" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f4e" href="videography.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">Our videography</div>
                                                 </div>
@@ -94,7 +94,7 @@
                                                     </div>
                                                 </div>
                                             </a>
-                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f54" href="/website-design-by-adko" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f54" href="website-design-by-adko.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">UI / UX</div>
                                                 </div>
@@ -102,7 +102,7 @@
                                                     <img loading="lazy" src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/685030d200cba19d22b8a0a9_UI%20UX.avif" alt="" class="menu-page-image-2"/>
                                                 </div>
                                             </a>
-                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f5a" href="/3d-animation-and-cgi" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f5a" href="3d-animation-and-cgi.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">3D Animation and CGI</div>
                                                 </div>
@@ -243,7 +243,7 @@
                                                 </div>
                                                 <div class="menu-divider"></div>
                                             </div>
-                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6e9" href="/photography-by-adkompany" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6e9" href="photography-by-adkompany.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">Our Photography</div>
                                                     <div class="text-body-2 text-semibold text-underline">Explore</div>
@@ -252,7 +252,7 @@
                                                     <img loading="lazy" src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/68502ae0f7228b75a1dc0755_Cocktail.avif" alt="" class="menu-page-image-2"/>
                                                 </div>
                                             </a>
-                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6f1" href="/videography" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6f1" href="videography.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">Our videography</div>
                                                     <div class="text-body-2 text-semibold text-underline">explore</div>
@@ -266,7 +266,7 @@
                                                     </div>
                                                 </div>
                                             </a>
-                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6f9" href="/website-design-by-adko" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6f9" href="website-design-by-adko.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">UI / UX</div>
                                                     <div class="text-body-2 text-semibold text-underline">explore</div>
@@ -275,7 +275,7 @@
                                                     <img loading="lazy" src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/685030d200cba19d22b8a0a9_UI%20UX.avif" alt="" class="menu-page-image-2"/>
                                                 </div>
                                             </a>
-                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed701" href="/3d-animation-and-cgi" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed701" href="3d-animation-and-cgi.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">3D Animation and CGI</div>
                                                     <div class="text-body-2 text-semibold text-underline">explore</div>
@@ -446,7 +446,7 @@
                     </nav>
                     <div class="nav-right">
                         <div class="nav-button-block">
-                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce1a031" href="/contact-us" aria-current="page" class="nav-button desktop w-inline-block w--current">
+                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce1a031" href="contact-us.html" aria-current="page" class="nav-button desktop w-inline-block w--current">
                                 <div class="nav-button-glow-wrapper">
                                     <div class="nav-button-glow"></div>
                                 </div>
@@ -602,7 +602,7 @@
                         <div class="contact-address-tile">
                             <div class="label-3 dark">Email</div>
                             <div class="text-block-10">
-                                <a href="mailto:info@adko.in" class="form-links">info@cateringcollective.in</a>
+                                <a href="mailto:Support@whitecirclegroup.in " class="form-links">info@cateringcollective.in</a>
                             </div>
                         </div>
                     </div>
@@ -698,8 +698,8 @@
                             </div>
                             <div class="contact-card-text">
                                 <div class="text-h6">Phone</div>
-                                <a href="tel:+918286271119" class="w-inline-block">
-                                    <div class="text-large">+91 82862 71119</div>
+                                <a href="tel:+917509759872" class="w-inline-block">
+                                    <div class="text-large">+91 7509759872</div>
                                 </a>
                             </div>
                         </div>
@@ -718,7 +718,7 @@
                             </div>
                             <div class="contact-card-text">
                                 <div class="text-h6">Email</div>
-                                <a href="mailto:info@adko.in" class="w-inline-block">
+                                <a href="mailto:Support@whitecirclegroup.in" class="w-inline-block">
                                     <div class="text-large">Support@whitecirclegroup.in </div>
                                 </a>
                             </div>
@@ -812,10 +812,10 @@
                                     <div class="text-size-tiny caps text-weight-medium">Explore</div>
                                 </div>
                                 <div class="foote-links-content">
-                                    <a href="/photography-by-adkompany" class="footer-link-text">Our Photography</a>
-                                    <a href="/videography" class="footer-link-text">Our videography</a>
-                                    <a href="/website-design-by-adko" class="footer-link-text">Website development</a>
-                                    <a href="/3d-animation-and-cgi" class="footer-link-text">3D Animation and CGI</a>
+                                    <a href="photography-by-adkompany.html" class="footer-link-text">Our Photography</a>
+                                    <a href="videography.html" class="footer-link-text">Our videography</a>
+                                    <a href="website-design-by-adko.html" class="footer-link-text">Website development</a>
+                                    <a href="3d-animation-and-cgi.html" class="footer-link-text">3D Animation and CGI</a>
                                 </div>
                             </div>
                         </div>
