--- a/our-campaigns.html
+++ b/our-campaigns.html
@@ -71,7 +71,7 @@
                                 <nav class="w-dropdown-list">
                                     <div class="mega-menu-wrap-2">
                                         <div class="mega-menu-halves-2">
-                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f48" href="/photography-by-adkompany" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f48" href="photography-by-adkompany.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">Our Photography</div>
                                                 </div>
@@ -79,7 +79,7 @@
                                                     <img loading="lazy" src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/68502ae0f7228b75a1dc0755_Cocktail.avif" alt="" class="menu-page-image-2"/>
                                                 </div>
                                             </a>
-                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f4e" href="/videography" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f4e" href="videography.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">Our videography</div>
                                                 </div>
@@ -92,7 +92,7 @@
                                                     </div>
                                                 </div>
                                             </a>
-                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f54" href="/website-design-by-adko" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f54" href="website-design-by-adko.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">UI / UX</div>
                                                 </div>
@@ -100,7 +100,7 @@
                                                     <img loading="lazy" src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/685030d200cba19d22b8a0a9_UI%20UX.avif" alt="" class="menu-page-image-2"/>
                                                 </div>
                                             </a>
-                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f5a" href="/3d-animation-and-cgi" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce19f5a" href="3d-animation-and-cgi.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">3D Animation and CGI</div>
                                                 </div>
@@ -241,7 +241,7 @@
                                                 </div>
                                                 <div class="menu-divider"></div>
                                             </div>
-                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6e9" href="/photography-by-adkompany" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6e9" href="photography-by-adkompany.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">Our Photography</div>
                                                     <div class="text-body-2 text-semibold text-underline">Explore</div>
@@ -250,7 +250,7 @@
                                                     <img loading="lazy" src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/68502ae0f7228b75a1dc0755_Cocktail.avif" alt="" class="menu-page-image-2"/>
                                                 </div>
                                             </a>
-                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6f1" href="/videography" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6f1" href="videography.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">Our videography</div>
                                                     <div class="text-body-2 text-semibold text-underline">explore</div>
@@ -264,7 +264,7 @@
                                                     </div>
                                                 </div>
                                             </a>
-                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6f9" href="/website-design-by-adko" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed6f9" href="website-design-by-adko.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">UI / UX</div>
                                                     <div class="text-body-2 text-semibold text-underline">explore</div>
@@ -273,7 +273,7 @@
                                                     <img loading="lazy" src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/685030d200cba19d22b8a0a9_UI%20UX.avif" alt="" class="menu-page-image-2"/>
                                                 </div>
                                             </a>
-                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed701" href="/3d-animation-and-cgi" class="megs-menu-right-2 w-inline-block">
+                                            <a data-w-id="ee03ce57-741c-a456-70e0-ceb8bb5ed701" href="3d-animation-and-cgi.html" class="megs-menu-right-2 w-inline-block">
                                                 <div class="menu-page-bottom-tile">
                                                     <div class="text-body-2 text-semibold">3D Animation and CGI</div>
                                                     <div class="text-body-2 text-semibold text-underline">explore</div>
@@ -444,7 +444,7 @@
                     </nav>
                     <div class="nav-right">
                         <div class="nav-button-block">
-                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce1a031" href="/contact-us" class="nav-button desktop w-inline-block">
+                            <a data-w-id="a5470cf1-8ec3-0643-d637-e6be7ce1a031" href="contact-us.html" class="nav-button desktop w-inline-block">
                                 <div class="nav-button-glow-wrapper">
                                     <div class="nav-button-glow"></div>
                                 </div>
@@ -499,7 +499,7 @@
                 <div class="blog-list-wrapper w-dyn-list">
                     <div role="list" class="blog-card-grid w-dyn-items">
                         <div role="listitem" class="works-item w-dyn-item">
-                            <a href="/works/google-fpv" class="blog-card w-inline-block">
+                            <a href="google-fpv.html" class="blog-card w-inline-block">
                                 <div class="blog-top-content">
                                     <div class="arrow-blog w-embed">
                                         <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -521,7 +521,7 @@
                             </a>
                         </div>
                         <div role="listitem" class="works-item w-dyn-item">
-                            <a href="/works/st-patricks-campaign" class="blog-card w-inline-block">
+                            <a href="st-patricks-campaign.html" class="blog-card w-inline-block">
                                 <div class="blog-top-content">
                                     <div class="arrow-blog w-embed">
                                         <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -543,7 +543,7 @@
                             </a>
                         </div>
                         <div role="listitem" class="works-item w-dyn-item">
-                            <a href="/works/vip-bags-product-launch" class="blog-card w-inline-block">
+                            <a href="vip-bags-product-launch.html" class="blog-card w-inline-block">
                                 <div class="blog-top-content">
                                     <div class="arrow-blog w-embed">
                                         <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -565,7 +565,7 @@
                             </a>
                         </div>
                         <div role="listitem" class="works-item w-dyn-item">
-                            <a href="/works/carlton-bags-product-launch-3d-animation" class="blog-card w-inline-block">
+                            <a href="carlton-bags-product-launch-3d-animation.html" class="blog-card w-inline-block">
                                 <div class="blog-top-content">
                                     <div class="arrow-blog w-embed">
                                         <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -603,7 +603,7 @@
                                     <h2 data-w-id="94e42c2d-338f-cd7a-4806-e14ca2454840" class="text-size-display text-weight-regular in-line-mobile">Contact WHITE Circle Group today!</h2>
                                 </div>
                             </div>
-                            <a data-w-id="94e42c2d-338f-cd7a-4806-e14ca2454842" href="/contact-us" class="cta-button white-mobile w-inline-block">
+                            <a data-w-id="94e42c2d-338f-cd7a-4806-e14ca2454842" href="contact-us.html" class="cta-button white-mobile w-inline-block">
                                 <div class="cta-button-content">
                                     <div class="text-size-regular cta">Get in touch</div>
                                     <div class="arrow-wrapper">
@@ -675,10 +675,10 @@
                                     <div class="text-size-tiny caps text-weight-medium">Explore</div>
                                 </div>
                                 <div class="foote-links-content">
-                                    <a href="/photography-by-adkompany" class="footer-link-text">Our Photography</a>
-                                    <a href="/videography" class="footer-link-text">Our videography</a>
-                                    <a href="/website-design-by-adko" class="footer-link-text">Website development</a>
-                                    <a href="/3d-animation-and-cgi" class="footer-link-text">3D Animation and CGI</a>
+                                    <a href="photography-by-adkompany.html" class="footer-link-text">Our Photography</a>
+                                    <a href="videography.html" class="footer-link-text">Our videography</a>
+                                    <a href="website-design-by-adko.html" class="footer-link-text">Website development</a>
+                                    <a href="3d-animation-and-cgi.html" class="footer-link-text">3D Animation and CGI</a>
                                 </div>
                             </div>
                         </div>
