--- a/brand-solutions.html
+++ b/brand-solutions.html
@@ -1161,7 +1161,7 @@
                                     <div class="text-size-tiny caps text-weight-medium">Quick Links</div>
                                 </div>
                                 <div class="foote-links-content">
-                                    <a href="/" class="footer-link-text">Home</a>
+                                    <a href="index.html" class="footer-link-text">Home</a>
                                     <a href="about.html" class="footer-link-text">About</a>
                                     <a href="brand-solutions.html" aria-current="page" class="footer-link-text w--current">Our Services</a>
                                     <a href="contact-us.html" class="footer-link-text">Contact</a>
