--- a/contact-us.html
+++ b/contact-us.html
@@ -801,7 +801,7 @@
                                     <div class="text-size-tiny caps text-weight-medium">Quick Links</div>
                                 </div>
                                 <div class="foote-links-content">
-                                    <a href="/" class="footer-link-text">Home</a>
+                                    <a href="index.html" class="footer-link-text">Home</a>
                                     <a href="about.html" class="footer-link-text">About</a>
                                     <a href="brand-solutions.html" class="footer-link-text">Our Services</a>
                                     <a href="contact-us.html" aria-current="page" class="footer-link-text w--current">Contact</a>
