--- a/about.html
+++ b/about.html
@@ -963,19 +963,20 @@
       <!-- <p class="text-size-regular team">WHITE Circle Group Mumbai</p> -->
     </div>
   </div>
-  <div class="w-layout-grid team-grid" style="display: flex !important; flex-direction: column; align-items: center; gap: 2rem; justify-content: center;">
-    <div class="member-card" style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem; max-width: 280px;">
+  <div class="w-layout-grid team-grid" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 4rem;">
+    <div class="member-card" style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem; flex: 1 1 300px; max-width: 300px;">
       <div style="font-size: 6rem; margin-bottom: 1rem;">👤</div>
       <div style="font-weight: bold; font-size: 1.5rem; margin-bottom: 0.5rem;">Nitin Kumar Tiwari</div>
       <div style="color: #999; font-size: 1rem;">Founder & CEO</div>
     </div>
-    <div class="member-card" style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem; max-width: 280px;">
+    <div class="member-card" style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem; flex: 1 1 300px; max-width: 300px;">
       <div style="font-size: 6rem; margin-bottom: 1rem;">👤</div>
       <div style="font-weight: bold; font-size: 1.5rem; margin-bottom: 0.5rem;">Aditya Pandey</div>
       <div style="color: #999; font-size: 1rem;">Marketing Specialist</div>
     </div>
   </div>
 </div>
+
 
 
                         <!-- <div class="member-card">
