--- a/contact-us.html
+++ b/contact-us.html
@@ -35,8 +35,8 @@
                 ("ontouchstart"in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
             }(window, document);
         </script>
-        <link href="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/67dec2bd95cc1cc0c9f3559c_favicon-32x32.png" rel="shortcut icon" type="image/x-icon"/>
-        <link href="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/67dec30b107d9f4286eb2f70_favicon.png" rel="apple-touch-icon"/>
+        <link href="https://i.ibb.co/sftyDB3/logo.png" rel="shortcut icon" type="image/x-icon"/>
+        <link href="https://i.ibb.co/sftyDB3/logo.png" rel="apple-touch-icon"/>
         <script type="text/javascript">
             window.__WEBFLOW_CURRENCY_SETTINGS = {
                 "currencyCode": "USD",
@@ -54,7 +54,7 @@
             <div class="main-container-3 w-container">
                 <div class="nav-container">
                     <a href="index.html" class="nav-brand w-nav-brand">
-                        <h1>White Circle Group</h1>
+                        <h1>WHITE CIRCLE GROUP</h1>
                         <img loading="lazy" src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/684ed51fbb3ccccfebd06a63_Logo%20Light.svg" alt="" class="nav-logo light"/>
                     </a>
                     <nav role="navigation" class="nav-menu w-nav-menu">
@@ -597,7 +597,10 @@
                     <div data-w-id="f34257f5-20a4-48d4-4c3f-421eb2226256" style="opacity:0" class="w-layout-grid contact-a-address-block">
                         <div class="contact-address-tile">
                             <div class="label-3 dark">Address</div>
-                            <div class="text-block">4013 1Aerocity- 4th floor, Metro Station, Safed Pul, Saki Naka, Mumbai, Maharashtra 400072</div>
+                            <div class="text-block">Swastik Galaxy 1st Floor Near Indira Square Shahdol</div>
+                            <div class="text-block">Branch Office 1: Ravi Bhavan Jaistambh chowk Raipur</div>
+                            <div class="text-block">Branch Office 2: MP Nagar Zone 1 Near Hotel Lemon tree Bhopal</div>
+
                         </div>
                         <div class="contact-address-tile">
                             <div class="label-3 dark">Email</div>
@@ -738,7 +741,9 @@
                             </div>
                             <div class="contact-card-text">
                                 <div class="text-h6">Address</div>
-                                <a href="https://maps.app.goo.gl/t5Gzk64T1BUufPzz6" target="_blank" class="text-large">4013 1Aerocity- 4th floor, Metro Station, Safed Pul, Saki Naka, Mumbai - 400072</a>
+                                <a href="https://maps.app.goo.gl/Qfi93WD43ABcAYmc6" target="_blank" class="text-large">Swastik Galaxy 1st Floor Near Indira Square Shahdol</a>
+                                <a href="" target="_blank" class="text-large">Branch Office 1: Ravi Bhavan Jaistambh chowk Raipur</a>
+                                <a href="" target="_blank" class="text-large">Branch Office 2: MP Nagar Zone 1 Near Hotel Lemon tree Bhopal</a>
                             </div>
                         </div>
                         <div class="card-contact-a">
