--- a/st-patricks-campaign.html
+++ b/st-patricks-campaign.html
@@ -49,8 +49,8 @@
                 ("ontouchstart"in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
             }(window, document);
         </script>
-        <link href="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/67dec2bd95cc1cc0c9f3559c_favicon-32x32.png" rel="shortcut icon" type="image/x-icon"/>
-        <link href="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/67dec30b107d9f4286eb2f70_favicon.png" rel="apple-touch-icon"/>
+        <link href="https://i.ibb.co/sftyDB3/logo.png" rel="shortcut icon" type="image/x-icon"/>
+        <link href="https://i.ibb.co/sftyDB3/logo.png" rel="apple-touch-icon"/>
         <script type="text/javascript">
             window.__WEBFLOW_CURRENCY_SETTINGS = {
                 "currencyCode": "USD",
@@ -68,7 +68,7 @@
             <div class="main-container-3 w-container">
                 <div class="nav-container">
                     <a href="index.html" class="nav-brand w-nav-brand">
-                        <h1>White Circle Group</h1>
+                        <h1>WHITE CIRCLE GROUP</h1>
                         <img loading="lazy" src="https://cdn.prod.website-files.com/67baec8acda347f8a7b9e834/684ed51fbb3ccccfebd06a63_Logo%20Light.svg" alt="" class="nav-logo light"/>
                     </a>
                     <nav role="navigation" class="nav-menu w-nav-menu">
