--- a/contact-us.html
+++ b/contact-us.html
@@ -742,8 +742,8 @@
                             <div class="contact-card-text">
                                 <div class="text-h6">Address</div>
                                 <a href="https://maps.app.goo.gl/Qfi93WD43ABcAYmc6" target="_blank" class="text-large">Swastik Galaxy 1st Floor Near Indira Square Shahdol</a>
-                                <a href="" target="_blank" class="text-large">Branch Office 1: Ravi Bhavan Jaistambh chowk Raipur</a>
-                                <a href="" target="_blank" class="text-large">Branch Office 2: MP Nagar Zone 1 Near Hotel Lemon tree Bhopal</a>
+                                <!-- <a href="" target="_blank" class="text-large">Branch Office 1: Ravi Bhavan Jaistambh chowk Raipur</a>
+                                <a href="" target="_blank" class="text-large">Branch Office 2: MP Nagar Zone 1 Near Hotel Lemon tree Bhopal</a> -->
                             </div>
                         </div>
                         <div class="card-contact-a">
@@ -843,7 +843,7 @@
                     <div class="footer-bottom-links">
                         <div class="credits-wrapper">
                             <p class="paragraph is-light">
-                                Copyright 2025 <span class="text-span">White Circle Gropup</span>
+                                Copyright 2025 <span class="text-span">White Circle Group</span>
                             </p>
                         </div>
                         <div class="footer-links">
